# llava-notebook

./: .debug  .gitignore  IDEAS.md  README.md  contributing.md  data_models.md  databaseFIll  gpt-context.txt  online-readme.md  package-lock.json  package.json  tauri-notes.md  todo.md  user.md
archive_prototype/rust_mongo_prototype/: .gitignore
archive_prototype/rust_mongo_prototype/src/: db.rs  errors.rs  helpers.rs  main.rs  models.rs  save_locally.rs
core/: Cargo.toml  filldatabaseTest.sqlite3-query
core/src/: config.rs  constants.rs  errors.rs  lib.rs  utils.rs
core/src/migrations/: migration.rs
core/src/models/: attachment.rs  mod.rs  note.rs  note_tags.rs
core/src/services/: logger.rs  mod.rs
core/src/services/auth/: database_creation.rs  logging.rs  logowanie.md  mod.rs  register.rs  utils.rs
core/src/services/auth/auth_data_models/: local_user.rs  online_account.rs
core/src/services/local_auth/: database_creation.rs  logging.rs  mod.rs  register.rs
core/src/services/local_auth/auth_data_models/: local_user.rs  mod.rs
core/src/services/online_auth/: mod.rs  online_account.rs  register.rs
core/src/services/online_auth/models/: mod.rs  online_account.rs
core/src/services/storage/: db_creation.rs  delete.rs  init_note.rs  read.rs  update.rs
core/src/services/user_settings/: metaphone.rs  mod.rs  setting_actions.rs  settings.rs  settings_constants.rs
core/src/services/user_stats/: dashboard_stats.rs  mod.rs
core/tests/: integration_test.rs
desktop/: .eslintcache  .prettierignore  .prettierrc  eslint.config.cjs  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
desktop/src/: App.vue  main.ts  style.css
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
desktop/src-tauri/src/commands/: auth.rs  command_helpers.rs  commands.rs  dashboard.rs  local_auth.rs  mod.rs  online_auth.rs  settings.rs  utils.rs
desktop/src-tauri/src/commands/handlers/: auth.rs  local_auth.rs  mod.rs
desktop/src/components/: BottomBar.vue  IconComponent.vue  LoadingCircle.vue  NoteCard.vue  TextArea.vue  YesNoChoosePage.vue
desktop/src/components/auth/: YesNoChoosePage.vue
desktop/src/components/auth/forms/: TextInput.vue
desktop/src/components/dashboard/: ActivityMapSquare.vue  DashboardNumberCard.vue  ScreenDeviderHorizontal.vue
desktop/src/components/forms/: FormButtons.vue  FormCard.vue  TextInput.vue  TinyError.vue
desktop/src/components/main/: BottomBar.vue  IconComponent.vue  LoadingCircle.vue
desktop/src/components/settings/: ChangeUsername.vue  CheckboxInput.vue  InfoText.vue  LogPreview.vue  PasswordInput.vue  SectionComp.vue  SelectInput.vue  SetButton.vue  SettingComp.vue  SwitchInput.vue
desktop/src/lib/: metaphone.ts
desktop/src/router/: vueRouter.js
desktop/src/stores/: auth.ts  onlineAuth.ts  userConfig.ts
desktop/src/tests/: methaphone.test.ts
desktop/src/types/: inputTypes.ts  note.ts  settingTypes.ts
desktop/src/views/: ChangePassword.vue  DashboardView.vue  LoadingPage.vue  LoginPage.vue  MainView.vue  RecoveryCodesPage.vue  RecoveryPage.vue  RegisterAskPage.vue  RegisterPage.vue  SettingsView.vue
desktop/src/views/auth/: ChangePassword.vue  LoginPage.vue  OnlineRegister.vue  RecoveryCodesPage.vue  RecoveryPage.vue  RegisterAskPage.vue  RegisterPage.vue
rust_mongo_prototype/: .gitignore  Cargo.toml
rust_mongo_prototype/src/: crud.rs  db.rs  errors.rs  helpers.rs  main.rs  models.rs  save_locally.rs  test.rs
server/: .env.sample  go.mod  go.sum  test.rest
server/cmd/: main.go
server/config/: connect_mongo.go  key.go
server/middleware/: error_handler.go  jwt.go
server/models/: auth.go  user.go
server/routes/: auth.go  routes.go
smartnote_core/: Cargo.toml
smartnote_core/src/: config.rs  constants.rs  errors.rs  lib.rs  main.rs  utils.rs
smartnote_core/src/models/: attachment.rs  mod.rs  note.rs  tag.rs
smartnote_core/src/services/: logger.rs  mod.rs  storage.rs
smartnote_core/src/services/auth/: database_creation.rs  logging.rs  mod.rs  register.rs
smartnote_core/src/services/auth/auth_data_models/: local_user.rs  mod.rs  online_account.rs
smartnote_core/src/services/storage/: add_note.rs  db_creation.rs  delete.rs  init_note.rs  mod.rs  read.rs  update.rs
smartnote_core/tests/: integration_test.rs
