[package]
name = "llava_core"
version = "0.1.0"
edition = "2024"

[lib]
name = "llava_core"  
path = "src/lib.rs"      


[dependencies]
anyhow = "1.0.100"
argon2 = { version = "0.5.3", features = ["std"] }
base32 = "0.5.1"
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
chrono = "0.4.42"
dirs-next = "2.0.0"
features = "0.10.0"
keyring = "3"
phf = "0.13.1"
phf_macros = "0.13.1"
rusqlite = { version = "0.38.0", features = ["bundled", "serde_json", "uuid"] }
sanitise-file-name = "1.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "time"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
windows-native = "1.0.44"
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["linux-native-sync-persistent"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
keyring = { version = "3" }
