[package]
name = "smartnote_core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
argon2 = { version = "0.5.3", features = ["std"] }
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
chrono = "0.4.42"
dirs-next = "2.0.0"
rusqlite = { version = "0.37.0", features = ["bundled", "serde_json", "uuid"] }
sanitise-file-name = "1.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }
