[package]
name = "smartnote_core"
version = "0.1.0"
edition = "2024"

[lib]
name = "smartnote_core"  
path = "src/lib.rs"      


[dependencies]
anyhow = "1.0.100"
argon2 = { version = "0.5.3", features = ["std"] }
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
chrono = "0.4.42"
dirs-next = "2.0.0"
log = "0.4.28"
rusqlite = { version = "0.37.0", features = ["bundled", "serde_json", "uuid"] }
sanitise-file-name = "1.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "time"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }
