[package]
name = "llava"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "llava_desktop_temp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
llava_core = { path = "../../core" } 
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
llava_core = { path = "../../core" }
uuid = { version = "1", features = ["v4", "serde"] }
zeroize = "1"
tracing = "0.1.43"
chacha20poly1305 = "0.10"
tauri-plugin-devtools = "2"
anyhow = "1.0.100"
rusqlite = "0.38.0"
indexmap = { version = "2.13.0", features = ["serde"] }
tauri-plugin-clipboard-manager = "2.3.2"
jsonwebtoken = { version = "10.3.0", features = ["hmac"] }

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
